fix content alignment

--- a/src/features/BusinessFundingBanner/BusinessFundingBannerContent.module.css
+++ b/src/features/BusinessFundingBanner/BusinessFundingBannerContent.module.css
@@ -8,11 +8,18 @@
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+    flex: 1 1 50%;
 
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5rem;
     font-family: 'Poppins', 'serif';
+}
+
+.businessFundingBannerContentBenefits {
+    display: flex;
+    flex-direction: column;
+    flex: 1 1 50%
 }
 
 .businessFundingBannerContentBenefit {
